fix: SM icons not centered on Mobile and scaling issues on Chrome and Firefox

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -7,21 +7,21 @@
   }
 
   .Navbar-Btn {
-    right: 25px;
-    margin: 50px;
-
+    justify-content: center;
+    align-items: center;
+    display: flex;
     transform: scale(0.8);
   }
 }
 
-@media only screen and (min-width: 1px) {
+
+@media only screen and (pointer: fine) and (min-width: 1px) {
   .Navbar {
     justify-content: flex-end;
     align-items: center;
 
     display: flex;
   }
-
 }
 
 .Navbar {
@@ -40,24 +40,19 @@
   box-shadow: 0px 8px 15px 5px;
 }
 
-.Navbar-SM-Align {
-  height: 10vh;
-  justify-content: flex-end;
-  align-items: center;
-
-  display: flex;
-}
-
 .Navbar-Btn {
-  width: 2.5vw;
-  height: 5vh;
-
-  position: relative;
   background-color: none;
 
-  justify-content:center;
+  height: 10vh;
+
+  min-width: 0;
+  min-height: 0;
+  overflow: hidden;
+
+  justify-content: flex-end;
   align-items:center;
   margin-right: 1.5vw;
+  flex: 0 1 75px;
 
-  display: inline-flex;
+  display: flex;
 }
